MODREQMED-211: Fix batch requests creation failure for different tenants
MODREQMED-211: Remove redundant changes